static/css/main.css
/*** Vars ***/

:root {
  --primary-color: #147158;
  --secondary-color: #5e81ac;
  --tertary-color: #bf616a;
  --fg-color: #121519;
  --fg-lighter-color: #12151950;
  --bg-color: #e7eef9;
  --bg-lighter-color: #f8f8ff;
}

[data-theme="dark"] {
  --primary-color: #5e81ac;
  --secondary-color: #a3be8c;
  --tertary-color: #ebcb8b;
  --fg-color: #eceff4;
  --fg-lighter-color: #eceff450;
  --bg-color: #121519;
  --bg-lighter-color: #2e3440;
}

/*** Theming ***/

#theme-toggle {
  border: none;
  background-color: var(--bg-color);
  cursor: pointer;
}

[data-theme="dark"] #theme-sun,
[data-theme="light"] #theme-moon {
  display: block !important;
  color: var(--primary-color);
}

[data-theme="light"] #theme-sun,
[data-theme="dark"] #theme-moon {
  display: none !important;
}

/*** Generic settings ***/

html,
body {
  margin: 0;
  padding: 0;
  max-width: 100%;
}

body {
  min-height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--bg-color);
  color: var(--fg-color);
  font-family: "Andika", sans-serif;
  font-size: 1rem; /* Default to 16px if no user changes */
}

h1,
h2,
h3,
h4,
h5 {
  font-family: "Quicksand", sans-serif;
  margin: 15px 0px 15px 0px;
}

h1,
h2 {
  font-weight: bold;
}

h1 {
  color: var(--bg-color);
  background-color: var(--primary-color);
  padding: 5px 15px 5px 15px;
  font-size: 3rem; /* Default to 48px */
  border-radius: 10px;
}

h2 {
  color: var(--primary-color);
  font-size: 2.5rem; /* Default to 40px */
}

h3 {
  font-size: 2rem; /* Default to 32px */
}

h4 {
  font-size: 1.5rem; /* Default to 24px */
}

p {
  text-align: justify;
}

img {
  display: block;
  max-inline-size: 100%;
}

a {
  color: var(--secondary-color);
  text-decoration: underline;
  text-decoration-style: dotted;
}

a:hover {
  color: var(--tertary-color);
}

ul {
  margin: 0;
  list-style-type: square;
  padding: 5px 0 5px 30px;
}

hr {
  margin-top: 32px;
  margin-bottom: 32px;
  border: 0px solid transparent;
  border-bottom: 2px dashed var(--fg-color);
  width: 100%;
}

kbd {
  background-color: var(--primary-color);
  color: var(--bg-color);
  padding: 1px 3px 1px 3px;
  border-radius: 5px;
}

blockquote {
  padding: 4px 12px 4px 12px;
  margin: 16px 0 16px 0;
  color: var(--fg-lighter-color);
  border-left: 8px solid var(--primary-color);
  width: 100%;
}

blockquote p {
  margin: 0px;
}

/*** Header ***/

header {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  border-bottom: 2px dashed var(--fg-color);
  padding: 15px 0px 15px 0px;
  margin-bottom: 15px;
}

header nav {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-left: 5%;
  padding-right: 5%;
  max-width: 1280px;
}

header nav ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  list-style: none;
  font-family: "Quicksand";
  font-size: 24px;
  gap: 16px;
  padding: 0px;
}

header nav h2 {
  font-family: "Amatic SC", sans-serif;
  font-weight: bold;
  font-size: 48px;
  color: var(--bg-color);
  background-color: var(--primary-color);
  padding: 5px 15px 5px 15px;
  border-radius: 10px;
  margin: 0px;
}

header a {
  color: inherit;
  text-decoration: none;
}

/** Main body **/

main {
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-content: flex-start;
  align-items: center;
  flex: 1;
}

/** Footer **/

footer {
  margin-top: 50px;
  padding-top: 15px;
  padding-bottom: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  border-top: 2px dashed var(--fg-color);
  flex: 0;
}

footer p {
  font-style: italic;
  margin: 0px;
}

footer .container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/*** Classes ***/

.container {
  max-width: 1024px;
  width: 100%;
}

.metadata,
.project p i {
  display: flex;
  gap: 15px;
  flex-wrap: wrap;
  color: var(--fg-lighter-color);
  font-style: italic;
}

.metadata p::before {
  content: "~";
}

.metadata p {
  margin: 0;
}

.index,
.project {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  padding: 0px;
}

.index > li,
.project > li {
  padding: 8px 16px 8px 16px;
  border-left: 8px solid var(--primary-color);
  background-color: var(--bg-lighter-color);
  margin-bottom: 32px;
  border-radius: 5px;
}

.index h3,
.project h3 {
  margin: 0px;
  color: var(--fg-color);
}

.index a {
  text-decoration: none;
  color: var(--fg-color);
  color: inherit;
}

.index a:hover {
  text-decoration: underline;
  text-decoration-style: dotted;
  color: var(--tertary-color);
}

.index p {
  margin: 2px 0px 0px 0px;
}

.project p {
  margin-bottom: 0rem;
}

.project > li > ul {
  list-style-type: none;
  padding: 0px 0px 0px 6px;
}

.profile {
  padding-top: 5px;
  padding-bottom: 5px;
  display: flex;
  flex-direction: row;
  gap: 16px;
  align-items: center;
}

.profile img {
  width: 260px;
  height: 260px;
  border-radius: 100%;
}

/*** Specific media queries ***/

@media (max-width: 1280px) {
  .container {
    padding-right: 5%;
    padding-left: 5%;
    width: 90%;
  }
}

@media (max-width: 768px) and (orientation: portrait) {
  header nav {
    flex-direction: column;
    padding-left: 6%;
    padding-right: 6%;
  }
  header nav ul {
    padding-top: 16px;
    justify-content: center;
  }

  .container {
    padding-right: 5%;
    padding-left: 5%;
    width: 90%;
  }

  .profile {
    flex-direction: column;
    flex-wrap: wrap;
  }
}

